--- a/website/package.json
+++ b/website/package.json
@@ -28,6 +28,7 @@
   "type": "module",
   "dependencies": {
     "svelte-drawer-component": "^1.2.2",
+    "svelte-material-icons": "^2.0.2",
     "svelte-tabs": "^1.1.0"
   }
 }
