--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,9 @@
   },
   "type": "module",
   "dependencies": {
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "socketio": "^1.0.0",
     "svelte-drawer-component": "^1.2.2",
     "svelte-material-icons": "^2.0.2",
     "svelte-tabs": "^1.1.0"
